--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.17.9",
-    "next": "14.0.4",
+    "lottie-web": "^5.12.2",
+    "next": "^14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
-    "react-player": "^2.14.1"
+    "react-lottie": "^1.2.4",
+    "react-player": "^2.14.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
