--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bootstrap": "^5.3.2",
     "framer-motion": "^10.17.9",
+    "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "next": "^14.0.4",
     "react": "^18",
