--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bootstrap": "^5.3.2",
     "framer-motion": "^10.17.9",
     "lottie-web": "^5.12.2",
     "next": "^14.0.4",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "react-lottie": "^1.2.4",
+    "react-modal": "^3.16.1",
     "react-player": "^2.14.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
