--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
+    "embla-carousel": "^8.0.0-rc19",
+    "embla-carousel-react": "^8.0.0-rc19",
     "framer-motion": "^10.17.9",
     "lottie-web": "^5.12.2",
     "next": "^14.0.4",
