--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-player": "^2.14.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
