--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.17.9",
     "next": "^14.0.4",
@@ -20,8 +22,11 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
+    "react-loader-spinner": "^6.1.6",
     "react-player": "^2.14.1",
+    "react-redux": "^9.1.0",
     "react-slick": "^0.29.0",
+    "redux-saga": "^1.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
