--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.5.3",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
