--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "redux-saga": "^1.3.0",
     "slick-carousel": "^1.8.1"
   },
