--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.2",
     "embla-carousel": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.17.9",
     "next": "^14.0.4",
     "react": "^18",
