--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "embla-carousel": "^8.0.0-rc19",
+    "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.0-rc19",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.17.9",
