--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.5.3",
     "react-loader-spinner": "^6.1.6",
+    "react-lottie": "^1.2.4",
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
